--- a/index.html
+++ b/index.html
@@ -6,29 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pemrograman Web</title>
 
-    <style>
-        * {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        .container {
-            background-color: #FFFAFF;
-            max-width: 730px;
-            padding: 10px;
-            margin: 0 auto;
-        }
-
-        img {
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <div class="container">
         <!-- JUDUL -->
         <center>
-            <h1><span id="element"></span></h1>
+            <h1 class="red"><span id="element"></span></h1>
+            <h2>Negative</h2>
         </center>
         <hr />
 
