--- a/index.html
+++ b/index.html
@@ -4,31 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pemrograman Web</title>
+    <title>Pemrograman Web</title> 
 
-    <style>
-        * {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        .container {
-            background-color: #FFFAFF;
-            max-width: 730px;
-            padding: 10px;
-            margin: 0 auto;
-        }
-
-        img {
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <div class="container">
         <!-- JUDUL -->
         <center>
-            <h1><span id="element"></span></h1>
+            <h1 class="red"><span id="element"></span></h1>
+            <h2>Negative</h2>
         </center>
         <hr />
 
@@ -43,7 +29,7 @@
             mengulas dampak kebakaran hutan, penyebabnya, serta upaya-upaya yang
             dapat diambil untuk mengatasi krisis ini.
         </p>
-        <p><b>1. Dampak Kebakaran Hutan:</b></p>
+        <p class="subjudul"><b>1. Dampak Kebakaran Hutan:</b></p>
 
         <ul>
             <li>
@@ -58,7 +44,7 @@
             </li>
         </ul>
 
-        <p><b>2. Penyebab Kebakaran Hutan:</b></p>
+        <p class="subjudul"><b>2. Penyebab Kebakaran Hutan:</b></p>
         <ul>
             <li>
                 <b>Pembukaan Lahan:</b> Praktik pembukaan lahan untuk perkebunan,
@@ -71,7 +57,7 @@
             </li>
         </ul>
 
-        <p><b>3. Upaya Pengendalian dan Pencegahan:</b></p>
+        <p class="subjudul"><b>3. Upaya Pengendalian dan Pencegahan:</b></p>
         <ul>
             <li>
                 <b>Penegakan Hukum:</b> Meningkatkan penegakan hukum terhadap
@@ -85,7 +71,7 @@
             </li>
         </ul>
         <br>
-        <h3>Kesimpulan:</h3>
+        <h3 class="kesimpulan">Kesimpulan:</h3>
         <p>
             Krisis kebakaran hutan bukan hanya masalah lokal, tetapi juga merupakan
             tantangan global yang memerlukan tanggapan serius. Hanya dengan
@@ -96,7 +82,7 @@
         </p>
 
         <center>
-            <h2>Media</h2>
+            <h2 class="subsubjudul">Media</h2>
             <!-- VIDEO -->
             <video height="400" controls>
                 <source src="assets/vidio/1ec1898a31d33e94a91fdbd4477b04cb.mp4" type="video/mp4">
@@ -104,7 +90,7 @@
             <br>
 
             <!-- AUDIO -->
-            <h2>Audio</h2>
+            <h2 class="subsubjudul">Audio</h2>
             <audio controls>
                 <source src="assets/audio/y2mate.com - Efek Suara  Kayu Terbakar Shorts_480p.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
@@ -112,12 +98,12 @@
             <br><br>
 
             <!-- YOUTUBE -->
-            <h2>Youtube Vidio</h2>
+            <h2 class="subsubjudul">Youtube Vidio</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/TNEPhyo9Mxw?si=R1OoHtOGcYT410IB"
                 title="Kebakaran Hutan" allowfullscreen></iframe>
 
             <!-- WORKMAP -->
-            <h2>Workmap</h2>
+            <h2 class="subsubjudul">Workmap</h2>
             <img src="assets/images/turkey-fire_169.jpeg" alt="Workplace" usemap="#workmap" width="400" height="379">
         </center>
 
